Knife makes two vertices instead of one when cutting an edge #39387

Closed
opened 2014-03-24 13:40:19 +01:00 by Aleksander Tarkhanov · 14 comments

System Information
Kubuntu Linux 13.04 64bit, AMD Radeon HD 4670 graphics

Blender Version
Broken: 2.70 official release (2014-03-19, hash 19e627c)
Worked: 2.68a (2.68.0 r58536)

Short description of error
Knife tool in some situations (not rare) makes not just one vertex on edge, but two in same location with edge between them.
"Same location" - that is "remove doubles" fixes this.

Bug is clearly seen when "Subdivision Surface" is in use.

Exact steps for others to reproduce the error
Steps (dublicated in *.blend textblock):
1. Select plane oblect and switch to EditMode (if not already).
2. Make knife cut like at image below - hitting every edge,

      not just top and bottom.
3. Hit Enter. Now you should have image like one in the bottom.

bug_knife_make_cut_here.jpg

bug_knife_final.jpg

knife_bug.blend

**System Information** Kubuntu Linux 13.04 64bit, AMD Radeon HD 4670 graphics **Blender Version** Broken: 2.70 official release (2014-03-19, hash 19e627c) Worked: 2.68a (2.68.0 r58536) **Short description of error** Knife tool in some situations (not rare) makes not just one vertex on edge, but two in same location with edge between them. "Same location" - that is "remove doubles" fixes this. Bug is clearly seen when "Subdivision Surface" is in use. **Exact steps for others to reproduce the error** Steps (dublicated in *.blend textblock): 1. Select plane oblect and switch to EditMode (if not already). 2. Make knife cut like at image below - hitting every edge, ``` not just top and bottom. ``` 3. Hit Enter. Now you should have image like one in the bottom. ![bug_knife_make_cut_here.jpg](https://archive.blender.org/developer/F82386/bug_knife_make_cut_here.jpg) ![bug_knife_final.jpg](https://archive.blender.org/developer/F82388/bug_knife_final.jpg) [knife_bug.blend](https://archive.blender.org/developer/F82385/knife_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @AleksanderTarkhanov

Added subscriber: @AleksanderTarkhanov

Added subscriber: @padone

Added subscriber: @padone

same here on Blender 2.70 official release

I would add that the problem only arises when "apply subsurf to editing cage" is on. If that option is off then everything works fine here.

steps:

  • create a sphere and add a subsurf modifier
  • turn on "apply subsurf to editing cage"
  • use knife to cut geometry

knife_01.JPG

knife_02.JPG

knife_03.JPG

same here on Blender 2.70 official release I would add that the problem only arises when "apply subsurf to editing cage" is on. If that option is off then everything works fine here. steps: - create a sphere and add a subsurf modifier - turn on "apply subsurf to editing cage" - use knife to cut geometry ![knife_01.JPG](https://archive.blender.org/developer/F82478/knife_01.JPG) ![knife_02.JPG](https://archive.blender.org/developer/F82480/knife_02.JPG) ![knife_03.JPG](https://archive.blender.org/developer/F82482/knife_03.JPG)

Oh! Fantastic! It's really the case!
In 2.68 all was fine and I was wondering since 2.69 - why people don't see such a salient problem!
With that knowledge this "singularity" will be much less annoying to me!

Thanks for your reply, Alessandro!

Oh! Fantastic! It's really the case! In 2.68 all was fine and I was wondering since 2.69 - why people don't see such a salient problem! With that knowledge this "singularity" will be much less annoying to me! Thanks for your reply, Alessandro!

you're welcome,

may be the reason why people don't notice it too much is because most Blender users use the detail-out approach to model, thus knife is rarely used. While in true box modeling knife is essential to define topology.

Hope they can fix it .. bye :)

you're welcome, may be the reason why people don't notice it too much is because most Blender users use the detail-out approach to model, thus knife is rarely used. While in true box modeling knife is essential to define topology. Hope they can fix it .. bye :)
Howard Trickey was assigned by Sergey Sharybin 2014-03-28 09:16:55 +01:00

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey

@howardt, mind looking into this report? Thanks!

@howardt, mind looking into this report? Thanks!
Member

Thanks for the bug report. Knife isn't well tested with subdivision and I guess I'm not too surprised it is broken. Will dive into this to debug.

Thanks for the bug report. Knife isn't well tested with subdivision and I guess I'm not too surprised it is broken. Will dive into this to debug.

thank you very much Mr. Howard :)

thank you very much Mr. Howard :)

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by 818a036c1a

This issue was referenced by 818a036c1af2792d78069b70ef8e5f6423c348cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 818a036c1a.

Closed by commit 818a036c1a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39387
No description provided.