Fix T39387: Knife makes duplicate verts with subsurf